--- a/lab2-tag/image.htm
+++ b/lab2-tag/image.htm
@@ -24,7 +24,7 @@
 
 <h2>Display images at different size</h2>
 <!-- set image size by attribute to 50% of its parent container, which in this case is the entire page -->
-<img src="planet-earth.jpg" width="50%" />
+<img src="planet-earth.jpg" height="30%" />
 <!-- set image size by style to a specific width -->
 <img src="planet-saturn.jpg" style="width:300px" />
 <!-- if no size are set, browser automatically use the default size -->
