--- a/bootstrap/blank.htm
+++ b/bootstrap/blank.htm
@@ -24,5 +24,26 @@
 	<script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+	<h1>Hello World</h1>
+	<h2>Welcome to Bootstrap</h2>
+	<p>Hello. This is some dummy text, testing 1,2,3.</p>
+
+	<div class='container'>
+		<div class="row">
+			<div class='col-md-8 col-sm-6 col-xs-12'>This is col-8 (desktop), col-6 for tablets</div>
+			<div class='col-md-4 col-sm-6 hidden-xs'>This is col-4 (desktop), col-6 for tablets
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sequi maxime, possimus enim ullam recusandae nostrum atque, ad quaerat quidem libero, assumenda! Eligendi saepe culpa, pariatur asperiores fugiat? Deleniti, eveniet.</p>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class='col-md-4'>This is col-4-1</div>
+			<div class='col-md-4'>This is col-4-2</div>
+			<div class='col-md-4'>This is col-4-3</div>
+		</div>
+	</div>
+
+
 </body>
 </html>
