--- a/lab2-tag/id_class.htm
+++ b/lab2-tag/id_class.htm
@@ -11,6 +11,8 @@
 	
 	/* planet have a blue box */
 	
+	/* make sure all background is yellow */
+
 	/* set apple box's background color to red */
 </style>
 
