--- a/lab2-tag/image.htm
+++ b/lab2-tag/image.htm
@@ -9,8 +9,8 @@
 <p>Notice that the images are set with alt (alternative text) attribute</p>
 <p>This alt text is useful when: image failed to load, accessibility (for screen reader)</p>
 
-<img src="planet-earth.jpg" alt="Earth" />
-<img src="planet-saturn.jpg" alt="Saturn" />
+<img src="planet-earth123.jpg" alt="Earth" />
+<img src="planet-saturn123.jpg" alt="Saturn" />
 <img src="planet-sun.jpg" alt="Sun" />
 
 <hr />
@@ -23,8 +23,8 @@
 
 
 <h2>Display images at different size</h2>
-<!-- set image size by attribute to 50% of its parent container, which in this case is the entire page -->
-<img src="planet-earth.jpg" height="30%" />
+<!-- set image size by attribute to 50% of its parent container, which in this case is the en tire page -->
+<img src="planet-earth.jpg" width="50%"  />
 <!-- set image size by style to a specific width -->
 <img src="planet-saturn.jpg" style="width:300px" />
 <!-- if no size are set, browser automatically use the default size -->
